add backend for comments, fix
