# backend/models/Exercise.js
@@ -8,7 +8,8 @@ const exerciseSchema = new Schema({
         maxlength: 50,
         unique: true,
     },
-    description: { type: String, maxlength: 500 },
+    creationDate: { type: Date, default: Date.now },
+    description: { type: String, maxlength: 5000 },
     difficulty: { type: Number, min: 1, max: 5 },
     author: { type: Schema.Types.ObjectId, ref: "User" },
     programmingLanguage: {
@@ -22,7 +23,8 @@ const exerciseSchema = new Schema({
         maxlength: 2000,
     },
     doneCounter: { type: Number, default: 0 },
-    hints: [{ type: String, maxlength: 500 }],
+    hints: [{ type: String, maxlength: 1000 }],
+    comments: [{ type: Schema.Types.ObjectId, ref: "Comment" }],
 });
 
 module.exports = model("Exercise", exerciseSchema);
